--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -1,200 +1,138 @@
 <html lang="en">
 
-<p class=MsoNormal style='margin-bottom:0in'>First author:</p>
+<style>
+  .tableContainer {
+    margin-left: .75pt;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: none;
+  }
 
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Alex Y. Ge*, <b>Abolfazl Arab</b>*, Raymond Dai, Albertas Navickas, Lisa Fish, Kristle Garcia, Hosseinali Asgharian, Hani Goodarzi, Luke A. Gilbert
-     A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
-     <i>bioRxiv</i> (2022)
-     | doi: <a href="https://doi.org/10.1101/2022.12.14.518457">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.12.14.518457</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-</ul>
- 
-<p class=MsoNormal style='margin-bottom:0in'>Middle author (preprint):</p>
+  .cell {
+    vertical-align: top;
+    width: 9in;
+    border: none;
+    padding: 0in 5.4pt 0in 5.4pt;
+    height: 15.75pt;
+  }
 
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     
-     CC Hsiung, CM Wilson, NA Sambold, R Dai, Q Chen, S Misiukiewicz, <b>A Arab</b>, N Teyssier, T O’Loughlin, JC Cofsky, J Shi, LA Gilbert,
-     Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
-     <i>bioRxiv</i> (2023)
-     | doi: <a href="https://doi.org/10.1101/2023.09.18.558350">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.09.18.558350</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- 
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Mikayla N Richter, Sina Farahvashi, Ryan M Samuel, Homa Majd, Angeline K Chemel, Jonathan T Ramirez, Alireza Majd, Megan D Scantlen, Nicholas Elder, Andrius Cesiulis, Kristle Garcia, Tanvi Joshi, Matthew G Keefe, Bardia Samiakalantari, Elena M Turkalj, Johnny Yu, <b>Abolfazl Arab</b>, Keyi Yin, Bruce Culbertson, Bianca Vora, Chenling Xiong, Michael G Kattah, Roshanak Irannejad, Deanna L Kroetz, Tomasz J Nowakowski, Hani Goodarzi, Faranak Fattahi,
-     Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin chemotherapy toxicity,
-     <i>bioRxiv</i> (2023)
-     | doi: <a href="https://doi.org/10.1101/2023.03.08.531806">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.03.08.531806</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
+  .basicText {
+    margin-bottom: 0in;
+    color: black;
+  }
 
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Arash Keshavarzi Arshadi, Milad Salem, Heather Karner, Kristle Garcia, <b>Abolfazl Arab</b>, Jiann Shiun Yuan, Hani Goodarzi,
-     Functional microRNA-Targeting Drug Discovery by Graph-Based Deep Learning,
-     <i>bioRxiv</i> (2023)
-     | doi: <a href="https://doi.org/10.1101/2023.01.13.524005">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.01.13.524005</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- 
-</ul>
+  .normalText {
+    font-style: normal;
+    line-height: 115%;
+  }
 
-<p class=MsoNormal style='margin-bottom:0in'>Middle author (peer-review):</p>
+  .boldText {
+    font-weight: bold;
+    line-height: 115%;
+  }
 
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-    Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Alireza Majd, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, Bradley Shibata, <b>Abolfazl Arab</b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
-    Deriving Schwann cells from hPSCs enables disease modeling and drug discovery for diabetic peripheral neuropathy,
-    <i>Cell Stem Cell</i> (2023) | doi: <a href="https://doi.org/10.1016/j.stem.2023.04.006">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab</b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
-     Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
-     <i>Cancers</i> (2023)
-     | doi: <a href="https://doi.org/10.3390/cancers15061831">
-     <span style='font-size:9.0pt;line-height:115%'>10.3390/cancers15061831</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Hideki Furuya, Yuka Sasaki, Runpu Chen, Rafael Peres, Kanani Hokutan, Kaoru Murakami, Nari Kim, Owen T. M. Chan, Ian Pagano, Lars Dyrskjøt, Jørgen B. Jensen, Per-Uno Malmstrom, Ulrika Segersten, Yijun Sun, <b>Abolfazl Arab</b>, Hani Goodarzi, Steve Goodison & Charles J. Rosser,
-     PAI-1 is a potential transcriptional silencer that supports bladder cancer cell activity.<br>
-     <i>Nature Scientific Report</i> (2022)
-     | doi: <a href="https://doi.org/10.1038/s41598-022-16518-3">
-     <span style='font-size:9.0pt;line-height:115%'>10.1038/s41598-022-16518-3</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
+  .smallText {
+    font-size: 10.0pt;
+    line-height: 115%;
+  }
 
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Christopher Yogodzinski, <b>Abolfazl Arab</b>, Justin R. Pritchard, Hani Goodarzi & Luke A. Gilbert,
-     A global cancer data integrator reveals principles of synthetic lethality, sex disparity and immunotherapy.
-     <i>Genome Medicine</i> (2021)
-     | doi: <a href="https://doi.org/10.1186/s13073-021-00987-8">
-     <span style='font-size:9.0pt;line-height:115%'>10.1186/s13073-021-00987-8</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
+  .midText {
+    font-size: 12.0pt;
+    line-height: 115%;
+  }
 
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Xiphias Ge Zhu, Aleksey Chudnovskiy, Lou Baudrier, Benjamin Prizer, Yuyang Liu, Benjamin N. Ostendorf, Norihiro Yamaguchi, <b>Abolfozl Arab</b>, Bernardo Tavora, Rebecca Timson, Søren Heissel, Elisa de Stanchina, Henrik Molina, Gabriel D. Victora, Hani Goodarzi, Kıvanç Birsoy,
-     Functional Genomics In Vivo Reveal Metabolic Dependencies of Pancreatic Cancer Cells,
-     <i>Cell Metabolism</i> (2020)
-     | doi: <a href="https://doi.org/10.1016/j.cmet.2020.10.017">
-     <span style='font-size:9.0pt;line-height:115%'>10.1016/j.cmet.2020.10.017</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
+  .largeText {
+    font-size: 14.0pt;
+    line-height: 115%;
+  }
+</style>
 
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Alireza Tabibkhooei, Maryam Izadpanahi, <b>Abolfazl Arab</b>, Ali Zare-Mirzaei, Sara Minaeian, Ali Rostami, Alireza Mohsenian,
-     Profiling of novel circulating microRNAs as a non-invasive biomarker in diagnosis and follow-up of high and low-grade gliomas,
-     <i>Clinical Neurology and Neurosurgery</i> (2020)
-     | doi: <a href="https://doi.org/10.1016/j.clineuro.2019.105652">
-     <span style='font-size:9.0pt;line-height:115%'>10.1016/j.clineuro.2019.105652</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
+<table class="tableContainer" border="0" cellspacing="0" cellpadding="0" width="715">
+  <!-- Pre-prints -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+        <p class="basicText normalText midText">
+            <b>Pre-prints:</b>
+                <ul class="basicText normalText smallText">
+                <li>
+                    Arab A*, Ge A*, Dai R*, et al.,
+                    A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
+                    <i>bioRxiv</i> (2022) | doi:
+                    <a href="https://doi.org/10.1101/2022.12.14.518457">10.1101/2022.12.14.518457</a><br>
+                    * equal contribution first authors
+                </li>
+                <li>
+                    Hsiung CC, Wilson CM, Sambold NA, Dai R, Chen Q, Misiukiewicz S, Arab A, et al.,
+                    Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
+                    <i>bioRxiv</i> (2023)† | doi:
+                    <a href="https://doi.org/10.1101/2023.09.18.558350">10.1101/2023.09.18.558350</a><br>
+                    † under review in Nature Biotechnology
+                </li>
+                <li>
+                    Richter M, …, Arab A, et al.,
+                    Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin
+                    chemotherapy toxicity,
+                    bioRxiv (2023) | doi:
+                    <i>bioRxiv</i> (2023) | doi:
+                    <a href="https://doi.org/10.1101/2023.03.08.531806">10.1101/2023.03.08.531806</a>
+                </li>
+                <li>
+                    Arshadi AK, Salem M, Karner H, Garcia K, Arab A, et al., Functional microRNA-Targeting Drug Discovery by
+                    Graph-Based Deep Learning,
+                    <i>bioRxiv</i> (2023) | doi:
+                    <a href="https://doi.org/10.1101/2023.01.13.524005">10.1101/2023.01.13.524005</a>
+                </li>
+            </ul>
+    </td>
+  </tr>
 
-</ul>
-
-<p class=MsoNormal style='margin-bottom:0in'>Conference paper:</p>
-
-<ul>
-
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  <b>Abolfazl Arab</b>, Luke Gilbert,
-  <a href="https://www.researchgate.net/publication/374337981_A_multiomics_approach_identifies_genes_potentially_regulated_through_RNA_m6A_methylation_and_promote_cellular_sensitivity_to_DNA_hypomethylation">
-         <span style='font-size:9.0pt;line-height:115%'>
-             A multiomics approach identifies genes potentially regulated through RNA m6A methylation and promote cellular sensitivity to DNA hypomethylation</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>,</span>
-     Poster Presentation, <i>1st NYC RNA Symposium 2023.</i>,
-     The Rockefeller University, NYC (2023)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- 
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Abolfazl Arab</b>, Sama Goliaei, Faramarz Mehrnejad,
-     <a href="https://www.researchgate.net/publication/358973101_Demonstration_of_cellular_dynamic_behavior_in_response_to_DNA_damage_through_gene_regulatory_network_analysis_of_single-cell_resolution_DNA_repair_phenotype_and_gene_expression_multi-omics_dataset">
-         <span style='font-size:9.0pt;line-height:115%'>
-             Demonstration of cellular dynamic behavior in response to DNA damage through gene regulatory network analysis of
-             single-cell resolution DNA repair phenotype and gene expression multi-omics dataset</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>,</span>
-     Poster Presentation, <i>1st International and 10th National Iranian Conference on Bioinformatics.</i>,
-     Kish, Iran, (2022)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Abolfazl Arab</b>, Fatemeh Gheidari, Fatemeh Arabi, Ehsan Arefian,
-     <a href="https://www.researchgate.net/publication/326580962_Predicting_an_application_of_miR-190b_apoptotic_enhancement_effect_on_Glioblastoma_Multiform">
-         <span style='font-size:9.0pt;line-height:115%'>
-             Predicting an Application of miR-190b:
-             Apoptotic Enhancement Effects on Glioblastoma Multiform</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>,</span>
-     Poster Presentation, <i>the 3rd Iranian Conference on Systems Biology</i>, Tehran, Iran, (2018)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-</ul>
-
-
-<p class=MsoNormal style='margin-bottom:0in'>Student journal articles:</p>
-
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Abolfazl Arab</b>,
-     <a href="https://www.researchgate.net/publication/343769939_Pursue_problem-solving_biology_what_I%27ve_learned_at_Harvard">
-         <span style='font-size:9.0pt;line-height:115%'> Pursue problem-solving biology: What I’ve learned at Harvard</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>,</span>
-     <i>DeNA 22</i> (2020)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Abolfazl Arab</b>,
-     <a href="https://www.researchgate.net/publication/321349058_Interview_with_Dr_Mohsen_Khosravi_MDPhD_The_Inception_of_being_a_Researcher">
-            <span style='font-size:9.0pt;line-height:115%width=250'> Interview with Dr. Mohsen Khosravi M.D., Ph.D., “The Inception of being a Researcher”</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>, </span>
-     <i>DeNA 15</i> (2016)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Motahareh Jadidi, <b>Abolfazl Arab</b>,
-     <a href="https://www.researchgate.net/publication/321350485_CRISPR_Gene_Therapy_System_a_Novel_Tools_to_Treat_Complex_Diseases_Persian">
-         <span style='font-size:9.0pt;line-height:115%width=250'>CRISPR Gene Therapy System: Novel Tools to Treat Complex Diseases</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>, </span>
-     <i>DeNA </i>15, (2016)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Abolfazl Arab</b>,
-     <a href="https://www.researchgate.net/publication/321349000_Interview_with_Dr_Hani_Goodarzi_PhD_Nowadays_Scientists_Social_Status">
-         <span style='font-size:9.0pt;line-height:115%width=250'>Interview with Dr. Hani Goodarzi Ph.D., “Nowadays Scientists Social Status”</span></a>
-     <span style='font-size:9.0pt;line-height:115%'>, </span>
-     <i>DeNA 10</i> (2014)
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-</ul>
-
+  <!-- Published -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+        <p class="basicText normalText midText">
+            <b>Published:</b>
+            <ul class="basicText normalText smallText">
+                <li>
+                    Majd H, Amin S, Ghazizadeh Z, ..., Arab A, et al.,
+                    Deriving Schwann cells from hPSCs enables disease modeling and drug discovery for
+                    diabetic peripheral neuropathy,
+                    Cell Stem Cell (2023) |
+                    doi: <a href="https://doi.org/10.1016/j.stem.2023.04.006">10.1016/j.stem.2023.04.006</a>.
+                </li>
+                <li>
+                    Xiao J, Sharma U, Arab A, et al.,
+                    Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
+                    Cancers (2023) |
+                    doi: <a href="https://doi.org/10.1038/s41467-022-29587-9">10.1038/s41467-022-29587-9</a>.
+                </li>
+                <li>
+                    Furuya H, Sasaki Y, Chen R, ..., Arab A, et al.,
+                    PAI-1 is a potential transcriptional silencer that supports bladder cancer cell activity,
+                    Nature Scientific Reports (2022) |
+                    doi: <a href="https://doi.org/10.1038/s41598-022-16518-3">10.1038/s41598-022-16518-3</a>.
+                </li>
+                <li>
+                    Yogodzinski C, Arab A, et al.,
+                    A global cancer data integrator reveals principles of synthetic lethality, sex disparity and immunotherapy,
+                    Genome Medicine (2021) |
+                    doi: <a href="https://doi.org/10.1186/s13073-021-00987-8">10.1186/s13073-021-00987-8</a>.
+                </li>
+                <li>
+                    Zhu X, Chudnovskiy A, Baudrier L, ..., Arab A, et al.,
+                    Functional Genomics In Vivo Reveal Metabolic Dependencies of Pancreatic Cancer Cells,
+                    Cell Metabolism (2020) |
+                    doi: <a href="https://doi.org/10.1016/j.cmet.2020.10.017">10.1016/j.cmet.2020.10.017</a>.
+                </li>
+                <li>
+                    Tabibkhooei A, Izadpanahi M, Arab A, et al.,
+                    Profiling of novel circulating microRNAs as a non-invasive biomarker in diagnosis and follow-up
+                    of high and low-grade gliomas,
+                    Clinical Neurology and Neurosurgery (2020) |
+                    doi: <a href="https://doi.org/10.1016/j.clineuro.2019.105652">10.1016/j.clineuro.2019.105652</a>.
+                </li>
+            </ul>
+    </td>
+  </tr>
+</table>
 
 </html>
