--- a/content/about/research.html
+++ b/content/about/research.html
@@ -95,7 +95,7 @@
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="basicText midText">
-        Title: Research Associate II - Supervisor: Dr. Luke Gilbert
+        Title: Research Associate II
       </p>
       <p class="basicText normalText smallText">
       Projects:
@@ -150,8 +150,7 @@
         </a>
       </p>
       <p class="basicText midText">
-        Title: Volunteer Researcher<br>
-        Supervisor: Dr. Marinka Zitnik
+        Title: Volunteer Researcher | Supervisor: Dr. Marinka Zitnik
       </p>
       <p class="basicText normalText smallText">
       Project: Defining new generalizable data loaders and tasks in artificial intelligence research on therapeutics
@@ -181,12 +180,11 @@
         </a>
       </p>
       <p class="basicText midText">
-        Title: Post-bac Fellow<br>
-        Mentor: Dr. Hadi Amiri<br>
-        Supervisor: Dr. Isaac S. Kohane
+        Title: Post-bac Fellow <a href="https://zaklab.org/">@Zak Lab</a> | Mentor: Dr. Hadi Amiri
       </p>
       <p class="basicText normalText smallText">
-      Project: Biological similarities among rare disease patients at Undiagnosed Diseases Network (UDN)
+      Project: Biological similarities among rare disease patients at
+        <a href="https://undiagnosed.hms.harvard.edu/">Undiagnosed Diseases Network (UDN)</a>
         <ul class="basicText normalText smallText">
           <li>Clustered patients with undiagnosed disease using textual information in referral letters and EHR data.</li>
           <li>Built automated patient phenotyping workflow using NLP representation learning techniques.</li>
@@ -222,8 +220,7 @@
         <a href="https://scholar.google.com/citations?user=p8jXoVgAAAAJ&hl=en">Mehrnejad</a> Labs
       </p>
       <p class="basicText midText">
-        Title: Master Student<br>
-        Advisers: Dr. Sama Goliaei and Dr. Faramarz Mehrnejad
+        Title: Master Student | Advisers: Dr. Sama Goliaei and Dr. Faramarz Mehrnejad
       </p>
       <p class="basicText normalText smallText">
       Project:
