--- a/content/about/research.html
+++ b/content/about/research.html
@@ -101,7 +101,7 @@
       Projects:
         <ul class="basicText normalText smallText">
         <li>
-          Development of a CRISPR screen analysis python toolkit, ScreenPro2 |
+          Development of a CRISPR screen analysis python toolkit, <b>ScreenPro2</b>.<br>
           <a href="https://arcinstitute.org/tools/screenpro2/">Website</a> |
           <a href="https://github.com/ArcInstitute/ScreenPro2">GitHub</a>
         </li>
