--- a/content/about/research.html
+++ b/content/about/research.html
@@ -220,7 +220,7 @@
         <a href="https://scholar.google.com/citations?user=p8jXoVgAAAAJ&hl=en">Mehrnejad</a> Labs
       </p>
       <p class="basicText midText">
-        Title: Master Student | Advisers: Dr. Sama Goliaei and Dr. Faramarz Mehrnejad
+        Title: Master Student
       </p>
       <p class="basicText normalText smallText">
       Project:
