--- a/content/about/research.html
+++ b/content/about/research.html
@@ -334,8 +334,7 @@
       </p>
 
       <p class="basicText midText">
-        Title: Volunteer Researcher<br>
-        Adviser: Dr. Mahmoud Ghandi
+        Title: Volunteer Researcher | Adviser: Dr. Mahmoud Ghandi
       </p>
       <p class="basicText normalText smallText">
       Project:
