--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -51,9 +51,9 @@
   <!-- Pre-prints -->
   <tr style="height:15.75pt">
     <td class="cell">
-        <p class="basicText normalText midText">
+        <p class="basicText normalText largeText">
             <b>Pre-prints:</b>
-                <ul class="basicText normalText smallText">
+            <ul class="basicText normalText midText">
                 <li>
                     Arab A*, Ge A*, Dai R*, et al.,
                     A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
@@ -89,9 +89,9 @@
   <!-- Published -->
   <tr style="height:15.75pt">
     <td class="cell">
-        <p class="basicText normalText midText">
+        <p class="basicText normalText largeText">
             <b>Published:</b>
-            <ul class="basicText normalText smallText">
+            <ul class="basicText normalText midText">
                 <li>
                     Majd H, Amin S, Ghazizadeh Z, ..., Arab A, et al.,
                     Deriving Schwann cells from hPSCs enables disease modeling and drug discovery for
