--- a/content/about/research.html
+++ b/content/about/research.html
@@ -76,9 +76,9 @@
       <p class="basicText midText">
         Title: Senior Research Associate
       </p>
-      <!--<p class="basicText normalText smallText">-->
+      <!--<p class="basicText normalText midText">-->
       <!--Projects:-->
-      <!--  <ul class="basicText normalText smallText">-->
+      <!--  <ul class="basicText normalText midText">-->
       <!--    <li>Perform multi-omics data analysis including development of custom R, Python, Nextflow and GUI workflows.</li>-->
       <!--    <li>Conduct CRISPR screens and single cell experiments including library preparation, QC and sequencing.</li>-->
       <!--  </ul>-->
@@ -97,9 +97,9 @@
       <p class="basicText midText">
         Title: Research Associate II
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Projects:
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
         <li>
           Development of a CRISPR screen analysis python toolkit, <b>ScreenPro2</b>.<br>
           <a href="https://arcinstitute.org/tools/screenpro2/">Website</a> |
@@ -152,9 +152,9 @@
       <p class="basicText midText">
         Title: Volunteer Researcher | Supervisor: Dr. Marinka Zitnik
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Project: Defining new generalizable data loaders and tasks in artificial intelligence research on therapeutics
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
           <li>Wrote new data loader module for knowledge graphs in
             <a href="tdcommons.ai">Therapeutics Data Commons (TDC)</a>.</li>
           <li>Extended
@@ -182,10 +182,10 @@
       <p class="basicText midText">
         Title: Post-bac Fellow <a href="https://zaklab.org/">@Zak Lab</a> | Mentor: Dr. Hadi Amiri
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Project: Biological similarities among rare disease patients at
         <a href="https://undiagnosed.hms.harvard.edu/">Undiagnosed Diseases Network (UDN)</a>
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
           <li>Clustered patients with undiagnosed disease using textual information in referral letters and EHR data.</li>
           <li>Built automated patient phenotyping workflow using NLP representation learning techniques.</li>
         </ul>
@@ -222,9 +222,9 @@
       <p class="basicText midText">
         Title: Master Student
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Project:
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
           <li>
             Conceptualization of multi-omics single cell assays using
             nano-biomimetic oligo probes for enzymatic activity detection. |
@@ -271,9 +271,9 @@
       <p class="basicText midText">
         Title: Scientific Research Assistant II
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Projects:
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
           <li>
             Helped develop and publish a novel software
             for large-scale data integration in cancer research, called
@@ -301,9 +301,9 @@
       <p class="basicText midText">
         Title: Junior Specialist II
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
         Projects:
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
         <li>Performed bulk and single cell RNA-seq data analysis of in-vitro or in-vivo drug and
           gene perturbation studies.
         </li>
@@ -336,9 +336,9 @@
       <p class="basicText midText">
         Title: Volunteer Researcher | Adviser: Dr. Mahmoud Ghandi
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Project:
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
           <li>Integrated and assessed co-expression patterns of microRNAs and target genes
             across cancer cell lines.
           </li>
@@ -371,9 +371,9 @@
       <p class="basicText midText">
         Title: Volunteer Researcher
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
       Project:
-        <ul class="basicText normalText smallText">
+        <ul class="basicText normalText midText">
           <li>Studied microRNA regulation of target gene expression in Glioblastoma
             cancer cells and patients.
           </li>
