--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -59,14 +59,14 @@
                     A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
                     <i>bioRxiv</i> (2022) | doi:
                     <a href="https://doi.org/10.1101/2022.12.14.518457">10.1101/2022.12.14.518457</a><br>
-                    * equal contribution first authors
+                    <b>* equal contribution first authors</b>
                 </li>
                 <li>
                     Hsiung CC, Wilson CM, Sambold NA, Dai R, Chen Q, Misiukiewicz S, <b>Arab A</b>, et al.,
                     Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
                     <i>bioRxiv</i> (2023)† | doi:
                     <a href="https://doi.org/10.1101/2023.09.18.558350">10.1101/2023.09.18.558350</a><br>
-                    † under review in Nature Biotechnology
+                    <b>† under review in Nature Biotechnology</b>
                 </li>
                 <li>
                     Richter M, …, <b>Arab A</b>, et al.,
