--- a/content/about/education.html
+++ b/content/about/education.html
@@ -64,7 +64,7 @@
       <p class="basicText midText">
         <i>M.Sc. Nano-biomimetics</i>
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
         Thesis title: "Gene regulatory network from single cell expression and DNA repair phenotype datasets"
       </p>
     </td>
@@ -73,7 +73,7 @@
       <p class="basicText midText">
         Tehran, Iran
       </p>
-      <p class="basicText smallText">
+      <p class="basicText midText">
         <i>Sep 2018 - Sep 2021</i>
       </p>
     </td>
@@ -86,7 +86,7 @@
       <p class="basicText midText">
         <i>B.Sc. Cellular & Molecular Biology</i>
       </p>
-      <p class="basicText normalText smallText">
+      <p class="basicText normalText midText">
         Thesis title: "Assessing how microRNA target genes are related using gene ontology analysis"
       </p>
     </td>
@@ -95,7 +95,7 @@
       <p class="basicText midText">
         Tehran, Iran
       </p>
-      <p class="basicText smallText">
+      <p class="basicText midText">
         <i>Sep 2013 - July 2018</i>
       </p>
     </td>
