--- a/content/about/research.html
+++ b/content/about/research.html
@@ -227,12 +227,12 @@
         <ul class="basicText normalText midText">
           <li>
             Conceptualization of multi-omics single cell assays using
-            nano-biomimetic oligo probes for enzymatic activity detection. |
+            nano-biomimetic oligo probes for enzymatic activity detection.<br>
             <a href="https://abearab.github.io/sc-haircut-net/thesis-slides-short.pdf">
             Thesis Slides</a>
           </li>
           <li>Implemented single-cell analysis workflow and graph search
-            algorithms to study gene regulatory networks. |
+            algorithms to study gene regulatory networks.<br>
             <a href="https://github.com/abearab/sc-haircut-net">GitHub</a>
           </li>
         </ul>
