--- a/content/about/education.html
+++ b/content/about/education.html
@@ -73,7 +73,7 @@
       <p class="basicText midText">
         Tehran, Iran
       </p>
-      <p class="basicText midText">
+      <p class="basicText smallText">
         <i>Sep 2018 - Sep 2021</i>
       </p>
     </td>
@@ -95,7 +95,7 @@
       <p class="basicText midText">
         Tehran, Iran
       </p>
-      <p class="basicText midText">
+      <p class="basicText smallText">
         <i>Sep 2013 - July 2018</i>
       </p>
     </td>
