--- a/content/about/mooc.html
+++ b/content/about/mooc.html
@@ -1,35 +1,67 @@
 <html lang="en">
 
+<style>
+  .basicText {
+    margin-bottom: 0in;
+    color: black;
+  }
 
-<span style='font-size:12.0pt'>
+  .normalText {
+    font-style: normal;
+    line-height: 115%;
+  }
+
+  .boldText {
+    font-weight: bold;
+    line-height: 115%;
+  }
+
+  .smallText {
+    font-size: 10.0pt;
+    line-height: 115%;
+  }
+
+  .midText {
+    font-size: 12.0pt;
+    line-height: 115%;
+  }
+
+  .largeText {
+    font-size: 14.0pt;
+    line-height: 115%;
+  }
+</style>
+
+
+<span style='midText'>
     <a href="https://www.linkedin.com/in/abolfazlarab/details/certifications/">
         <span>Certifications</span>
     </a>
 </span>
 
-<ul>
-  <li style='font-size:9.0pt;line-height:115%'>
+<ul class="basicText normalText midText">
+  <li>
       Evaluation of Undiagnosed and Rare Conditions – Offered by <b>Undiagnosed Diseases Network (UDN)</b>
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
       <b>Natural Language Processing</b> in TensorFlow – Offered by DeepLearning.AI at Coursera
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
       <b>R Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
    <b>Python Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
    Introduction to Programming with <b>MATLAB</b> – Offered by Vanderbilt University at Coursera
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
    <b>Deep Learning</b> Specialization (x5 courses) – Offered by DeepLearning.AI at Coursera
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
    <b>Artificial Intelligence</b> for Everyone – Offered by DeepLearning.AI at Coursera
   </li>
-  <li style='font-size:9.0pt;line-height:115%'>
+  <li>
    How to <b>Build a Startup</b> – Offered by The Lean LaunchPad at Udacity
   </li>
 </ul>
