--- a/content/about/mooc.html
+++ b/content/about/mooc.html
@@ -39,7 +39,7 @@
     </a>
 </span>
 
-<ul class="basicText normalText midText">
+<ul class="basicText normalText smallText">
   <li>
       Evaluation of Undiagnosed and Rare Conditions – Offered by <b>Undiagnosed Diseases Network (UDN)</b>
   </li>
